WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208557
Web Inspector: set both the page's and the window's appearance when modifying the frontend forced appearance in the case that the frontend is docked
https://bugs.webkit.org/show_bug.cgi?id=208557
Summary
Web Inspector: set both the page's and the window's appearance when modifying...
Devin Rousso
Reported
2020-03-03 20:47:03 PST
# STEPS TO REPRODUCE: 1. inspect any page 2. dock Web Inspector 3. go to the Settings Tab 4. change the Appearance to Dark => nothing happens 5. detach/undock Web Inspector => content shifts to dark appearance
Attachments
Patch
(2.84 KB, patch)
2020-03-03 20:54 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2020-03-03 20:54:57 PST
Created
attachment 392369
[details]
Patch
WebKit Commit Bot
Comment 2
2020-03-03 21:41:04 PST
Comment on
attachment 392369
[details]
Patch Clearing flags on attachment: 392369 Committed
r257833
: <
https://trac.webkit.org/changeset/257833
>
WebKit Commit Bot
Comment 3
2020-03-03 21:41:05 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-03-03 21:42:16 PST
<
rdar://problem/60026792
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug